# YouTube-Content-Creation-Agent

./: .env  README.md  architecture.excalidraw  demo.excalidraw  project_draft.md  pyproject.toml  requirements.txt
all-utils/db/: chroma.sqlite3
all-utils/utilities/: 1. Pydanctic Request & Response Model.ipynb  2. Query Validation & Query Transformation.ipynb  3. Logging.ipynb  4. Mem0.ipynb  mem0_example.py  pydantic_models.py  query_validation_transformation.py
docs/: api.md  contributing.md  installation.md  usage.md
workflows/: core_logic_workflow.md  flask_app_workflow.md  mcp_server_workflow.md  streamlit_demo_workflow.md  system_architecture.md  utilities_workflow.md
